--- a/index.html
+++ b/index.html
@@ -4,24 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>採用管理システム</title>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div id="root"></div>
     <script type="text/babel">
-        // 簡易認証機能付きのコード
         const { useState, useCallback, useMemo } = React;
 
-        // パスワード認証コンポーネント
+        // 採用者属性の定数
+        const HIRING_ATTRIBUTES = [
+          { value: 'experienced', label: '経験者' },
+          { value: 'potential', label: 'ポテンシャル採用' },
+          { value: 'skill-dependent', label: 'スキル次第' },
+          { value: 'none', label: '特になし' }
+        ];
+
+        // 採用フェーズの定数
+        const RECRUITMENT_PHASES = [
+          { id: 'application', name: '応募', color: 'bg-pink-500' },
+          { id: 'screening', name: '書類選考', color: 'bg-blue-500' },
+          { id: 'interview1', name: '一次面接', color: 'bg-orange-500' },
+          { id: 'interview2', name: '二次面接', color: 'bg-purple-500' },
+          { id: 'final', name: '最終面接', color: 'bg-indigo-500' },
+          { id: 'offer', name: '内定', color: 'bg-green-500' },
+          { id: 'hired', name: '採用決定', color: 'bg-emerald-500' },
+          { id: 'declined', name: '辞退', color: 'bg-orange-500' },
+          { id: 'rejected', name: '不合格', color: 'bg-red-500' }
+        ];
+
+        // ログインコンポーネント
         const LoginComponent = ({ onLogin }) => {
             const [password, setPassword] = useState('');
             
             const handleSubmit = (e) => {
                 e.preventDefault();
-                if (password === 'company2024') { // パスワードは後で変更可能
+                if (password === 'company2024') {
                     onLogin();
                 } else {
                     alert('パスワードが正しくありません');
@@ -54,10 +74,201 @@
             );
         };
 
-        // ここに採用管理システムのコードを挿入
-        // （長いので省略しますが、実際には先ほどのReactコンポーネント全体をここに配置）
+        // 採用管理システム
+        const RecruitmentSystem = () => {
+            const [positions, setPositions] = useState([
+                { 
+                  id: 1, 
+                  name: 'ネイル本部人員（セールス＆CS）',
+                  department: 'リテール事業部',
+                  hiringManager: '田中マネージャー',
+                  hiringAttribute: 'experienced',
+                  phases: [
+                    { ...RECRUITMENT_PHASES[0], candidates: [
+                      { id: 'pos1-app1', name: 'Aさん', notes: '経験豊富', createdAt: new Date() },
+                      { id: 'pos1-app2', name: 'Bさん', notes: '', createdAt: new Date() }
+                    ]},
+                    { ...RECRUITMENT_PHASES[1], candidates: [
+                      { id: 'pos1-scr1', name: 'Cさん', notes: '書類通過', createdAt: new Date() }
+                    ]},
+                    ...RECRUITMENT_PHASES.slice(2).map(phase => ({ ...phase, candidates: [] }))
+                  ]
+                },
+                { 
+                  id: 2, 
+                  name: 'アイリスト本部人員（セールス＆CS）',
+                  department: 'リテール事業部',
+                  hiringManager: '山田部長',
+                  hiringAttribute: 'potential',
+                  phases: [
+                    { ...RECRUITMENT_PHASES[0], candidates: [
+                      { id: 'pos2-app1', name: 'Dさん', notes: '', createdAt: new Date() }
+                    ]},
+                    { ...RECRUITMENT_PHASES[1], candidates: [] },
+                    { ...RECRUITMENT_PHASES[2], candidates: [
+                      { id: 'pos2-int1', name: 'Eさん', notes: '面接良好', createdAt: new Date() }
+                    ]},
+                    ...RECRUITMENT_PHASES.slice(3).map(phase => ({ ...phase, candidates: [] }))
+                  ]
+                }
+            ]);
 
-        // メインアプリコンポーネント
+            const [selectedPosition, setSelectedPosition] = useState(null);
+
+            const getPositionStats = (position) => {
+                const totalCandidates = position.phases.reduce((sum, phase) => sum + phase.candidates.length, 0);
+                const applicationCount = position.phases.find(p => p.id === 'application')?.candidates.length || 0;
+                const screeningCount = position.phases.find(p => p.id === 'screening')?.candidates.length || 0;
+                const interview1Count = position.phases.find(p => p.id === 'interview1')?.candidates.length || 0;
+                const interview2Count = position.phases.find(p => p.id === 'interview2')?.candidates.length || 0;
+                const finalCount = position.phases.find(p => p.id === 'final')?.candidates.length || 0;
+                const offerCount = position.phases.find(p => p.id === 'offer')?.candidates.length || 0;
+                const hiredCount = position.phases.find(p => p.id === 'hired')?.candidates.length || 0;
+                const declinedCount = position.phases.find(p => p.id === 'declined')?.candidates.length || 0;
+                const rejectedCount = position.phases.find(p => p.id === 'rejected')?.candidates.length || 0;
+                
+                return { 
+                  totalCandidates, 
+                  applicationCount,
+                  screeningCount,
+                  interview1Count,
+                  interview2Count,
+                  finalCount,
+                  offerCount,
+                  hiredCount, 
+                  declinedCount, 
+                  rejectedCount 
+                };
+            };
+
+            if (selectedPosition) {
+                return (
+                    <div className="p-6 bg-gray-100 min-h-screen">
+                        <div className="mb-6">
+                            <button
+                                onClick={() => setSelectedPosition(null)}
+                                className="mb-4 text-gray-600 hover:text-gray-800"
+                            >
+                                ← ポジション一覧に戻る
+                            </button>
+                            <h1 className="text-2xl font-bold text-gray-800">{selectedPosition.name}</h1>
+                            <p className="text-gray-600">{selectedPosition.department}</p>
+                        </div>
+
+                        <div className="flex gap-4 overflow-x-auto pb-4">
+                            {selectedPosition.phases.map((phase) => (
+                                <div key={phase.id} className="min-w-80 bg-gray-50 rounded-lg p-4">
+                                    <div className="flex items-center justify-between mb-4">
+                                        <div className="flex items-center space-x-2">
+                                            <div className={`w-4 h-4 rounded-full ${phase.color}`}></div>
+                                            <h2 className="font-semibold text-gray-800">{phase.name}</h2>
+                                        </div>
+                                        <span className="text-sm text-gray-500">{phase.candidates.length}</span>
+                                    </div>
+
+                                    <div className="space-y-2 mb-4">
+                                        {phase.candidates.map((candidate) => (
+                                            <div key={candidate.id} className="bg-white rounded-lg shadow-sm border p-3">
+                                                <div className="font-medium text-sm text-gray-800">{candidate.name}</div>
+                                                {candidate.notes && (
+                                                    <div className="text-xs text-gray-600 mt-1">{candidate.notes}</div>
+                                                )}
+                                            </div>
+                                        ))}
+                                        {phase.candidates.length === 0 && (
+                                            <div className="text-center text-gray-400 text-sm py-8">
+                                                まだ候補者がいません
+                                            </div>
+                                        )}
+                                    </div>
+                                </div>
+                            ))}
+                        </div>
+                    </div>
+                );
+            }
+
+            return (
+                <div className="p-6 bg-gray-100 min-h-screen">
+                    <div className="flex items-center justify-between mb-6">
+                        <h1 className="text-2xl font-bold text-gray-800">採用ポジション管理</h1>
+                    </div>
+
+                    <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                        {positions.map((position) => {
+                            const stats = getPositionStats(position);
+                            return (
+                                <div 
+                                    key={position.id} 
+                                    className="bg-white rounded-lg shadow-sm border p-6 hover:shadow-md transition-shadow cursor-pointer"
+                                    onClick={() => setSelectedPosition(position)}
+                                >
+                                    <div className="mb-4">
+                                        <h3 className="font-semibold text-gray-800 mb-1">{position.name}</h3>
+                                        <p className="text-sm text-gray-600 mb-1">{position.department}</p>
+                                        <div className="text-xs text-gray-500 mb-1">
+                                            <span className="font-medium">責任者:</span> {position.hiringManager}
+                                        </div>
+                                        <div className="text-xs text-gray-500">
+                                            <span className="font-medium">属性:</span> {HIRING_ATTRIBUTES.find(a => a.value === position.hiringAttribute)?.label}
+                                        </div>
+                                    </div>
+
+                                    <div className="space-y-3">
+                                        <div className="grid grid-cols-5 gap-2 text-center">
+                                            <div>
+                                                <div className="text-lg font-bold text-blue-600">{stats.totalCandidates}</div>
+                                                <div className="text-xs text-gray-500">総候補者</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-pink-600">{stats.applicationCount}</div>
+                                                <div className="text-xs text-gray-500">応募</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-blue-600">{stats.screeningCount}</div>
+                                                <div className="text-xs text-gray-500">書類選考</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-orange-600">{stats.interview1Count}</div>
+                                                <div className="text-xs text-gray-500">一次面接</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-purple-600">{stats.interview2Count}</div>
+                                                <div className="text-xs text-gray-500">二次面接</div>
+                                            </div>
+                                        </div>
+                                        <div className="grid grid-cols-5 gap-2 text-center">
+                                            <div>
+                                                <div className="text-lg font-bold text-indigo-600">{stats.finalCount}</div>
+                                                <div className="text-xs text-gray-500">最終面接</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-green-600">{stats.offerCount}</div>
+                                                <div className="text-xs text-gray-500">内定</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-emerald-600">{stats.hiredCount}</div>
+                                                <div className="text-xs text-gray-500">採用決定</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-orange-600">{stats.declinedCount}</div>
+                                                <div className="text-xs text-gray-500">辞退</div>
+                                            </div>
+                                            <div>
+                                                <div className="text-lg font-bold text-red-600">{stats.rejectedCount}</div>
+                                                <div className="text-xs text-gray-500">不合格</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            );
+                        })}
+                    </div>
+                </div>
+            );
+        };
+
+        // メインアプリ
         const App = () => {
             const [isAuthenticated, setIsAuthenticated] = useState(() => {
                 return localStorage.getItem('authenticated') === 'true';
@@ -79,7 +290,7 @@
 
             return (
                 <div>
-                    <div className="absolute top-4 right-4">
+                    <div className="absolute top-4 right-4 z-50">
                         <button 
                             onClick={handleLogout}
                             className="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded text-sm"
@@ -87,7 +298,7 @@
                             ログアウト
                         </button>
                     </div>
-                    <RecruitmentPositionKanban />
+                    <RecruitmentSystem />
                 </div>
             );
         };
