--- a/index.html
+++ b/index.html
@@ -712,8 +712,7 @@
                 saveData(updatedPositions);
                 
                 if (selectedPosition?.id === positionId) {
-                    setSelectedPosition(
-                        setSelectedPosition(null);
+                    setSelectedPosition(setSelectedPosition(null);
                }
            }, [positions, selectedPosition, saveData]);
 
@@ -1066,3 +1065,4 @@
    </script>
 </body>
 </html>
+                        
