--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             
             const handleSubmit = (e) => {
                 e.preventDefault();
-                if (password === 'sarowin2024') {
+                if (password === 'salowin2024') {
                     onLogin();
                 } else {
                     alert('パスワードが正しくありません');
