Fix duplicate back button completely
Remove all duplicate navigation buttons, keep only smart back button

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             
             const handleSubmit = (e) => {
                 e.preventDefault();
-                if (password === 'sarowin2024') {
+                if (password === 'salowin2025') {
                     onLogin();
                 } else {
                     alert('パスワードが正しくありません');
