--- a/index.html
+++ b/index.html
@@ -898,7 +898,24 @@
                       />
                     </div>
                     <div className="text-xs text-gray-500">
-                      <strong>登録日:</strong> {new Date(candidate.createdAt).toLocaleDateString()}
+                      <strong>登録日:</strong> {new Date(candidate.createdAt).toLocaleString('ja-JP', {
+                        year: 'numeric',
+                        month: 'short', 
+                        day: 'numeric',
+                        hour: '2-digit',
+                        minute: '2-digit'
+                      })}
+                      {candidate.lastUpdated && candidate.lastUpdated !== candidate.createdAt && (
+                        <div className="mt-1">
+                          <strong>最終更新:</strong> {new Date(candidate.lastUpdated).toLocaleString('ja-JP', {
+                            year: 'numeric',
+                            month: 'short',
+                            day: 'numeric', 
+                            hour: '2-digit',
+                            minute: '2-digit'
+                          })} <span className="text-blue-500">(フェーズ移動)</span>
+                        </div>
+                      )}
                     </div>
                   </div>
                 )}
@@ -972,6 +989,31 @@
             });
 
             return actions;
+          };
+
+          // 日付時間のフォーマット関数
+          const formatDateTime = (dateString) => {
+            const date = new Date(dateString);
+            const now = new Date();
+            const diffMs = now - date;
+            const diffHours = Math.floor(diffMs / (1000 * 60 * 60));
+            const diffDays = Math.floor(diffMs / (1000 * 60 * 60 * 24));
+
+            if (diffHours < 1) {
+              const diffMinutes = Math.floor(diffMs / (1000 * 60));
+              return diffMinutes < 1 ? 'たった今' : `${diffMinutes}分前`;
+            } else if (diffHours < 24) {
+              return `${diffHours}時間前`;
+            } else if (diffDays < 7) {
+              return `${diffDays}日前`;
+            } else {
+              return date.toLocaleDateString('ja-JP', {
+                month: 'short',
+                day: 'numeric',
+                hour: '2-digit',
+                minute: '2-digit'
+              });
+            }
           };
 
           const quickActions = getQuickActions();
@@ -1117,9 +1159,14 @@
               </div>
 
               <div className="flex items-center justify-between text-xs text-gray-400">
-                <div className="flex items-center">
+                <div className="flex items-center space-x-2">
                   <Clock />
-                  <span className="ml-1">{new Date(candidate.createdAt).toLocaleDateString()}</span>
+                  <div className="flex flex-col">
+                    <span>{formatDateTime(candidate.lastUpdated || candidate.createdAt)}</span>
+                    {candidate.lastUpdated && candidate.lastUpdated !== candidate.createdAt && (
+                      <span className="text-xs text-blue-500">移動済み</span>
+                    )}
+                  </div>
                 </div>
                 <div className="text-blue-500">
                   {isSelected && <span>（ドラッグ可能）</span>}
@@ -1288,7 +1335,8 @@
                     name: candidateName.trim(),
                     notes: '',
                     customFields: {},
-                    createdAt: new Date().toISOString()
+                    createdAt: new Date().toISOString(),
+                    lastUpdated: new Date().toISOString()
                 };
 
                 const updatedPositions = positions.map(position => {
@@ -1322,7 +1370,11 @@
                                         ...phase,
                                         candidates: phase.candidates.map(candidate => 
                                             candidate.id === candidateId 
-                                                ? { ...candidate, ...updates }
+                                                ? { 
+                                                    ...candidate, 
+                                                    ...updates,
+                                                    lastUpdated: new Date().toISOString()
+                                                }
                                                 : candidate
                                         )
                                     }
@@ -1346,6 +1398,12 @@
                 
                 if (!candidate) return;
 
+                // 移動時に最新の日時を更新
+                const updatedCandidate = {
+                    ...candidate,
+                    lastUpdated: new Date().toISOString()
+                };
+
                 const updatedPositions = positions.map(pos => {
                     if (pos.id === selectedPosition.id) {
                         const updatedPosition = {
@@ -1354,7 +1412,7 @@
                                 if (phase.id === fromPhaseId) {
                                     return { ...phase, candidates: phase.candidates.filter(c => c.id !== candidateId) };
                                 } else if (phase.id === toPhaseId) {
-                                    return { ...phase, candidates: [...phase.candidates, candidate] };
+                                    return { ...phase, candidates: [...phase.candidates, updatedCandidate] };
                                 }
                                 return phase;
                             })
