--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
         const RecruitmentSystem = () => {
             const [positions, setPositions] = useState([]);
             const [selectedPosition, setSelectedPosition] = useState(null);
+            const [selectedCandidate, setSelectedCandidate] = useState(null);
+            const [newTaskInputs, setNewTaskInputs] = useState({});
+            const [detailModalOpen, setDetailModalOpen] = useState(false);
+            const [detailEditingCandidate, setDetailEditingCandidate] = useState(null);
+            const [detailEditingPhase, setDetailEditingPhase] = useState(null);
 
             // デフォルトデータ読み込み関数
             const loadDefaultData = useCallback(() => {
@@ -261,6 +266,110 @@
                 const totalCandidates = position.phases.reduce((sum, phase) => sum + phase.candidates.length, 0);
                 return { totalCandidates };
             };
+
+            // 候補者選択
+            const handleCandidateClick = useCallback((candidate) => {
+                setSelectedCandidate(prev => prev?.id === candidate.id ? null : candidate);
+            }, []);
+
+            // 詳細モーダルを開く
+            const openCandidateDetail = useCallback((candidate) => {
+                if (!selectedPosition) return;
+                const phase = selectedPosition.phases.find(p => 
+                    p.candidates.some(c => c.id === candidate.id)
+                );
+                if (phase) {
+                    setDetailEditingCandidate(candidate);
+                    setDetailEditingPhase(phase.id);
+                    setDetailModalOpen(true);
+                }
+            }, [selectedPosition]);
+
+            // 候補者を追加
+            const addCandidate = useCallback((phaseId, candidateName) => {
+                if (!candidateName.trim() || !selectedPosition) return;
+
+                const newCandidate = {
+                    id: `pos${selectedPosition.id}-${phaseId}-${Date.now()}`,
+                    name: candidateName.trim(),
+                    notes: '',
+                    customFields: {},
+                    createdAt: new Date().toISOString(),
+                    lastUpdated: new Date().toISOString()
+                };
+
+                const updatedPositions = positions.map(position => {
+                    if (position.id === selectedPosition.id) {
+                        const updatedPosition = {
+                            ...position,
+                            phases: position.phases.map(phase => 
+                                phase.id === phaseId 
+                                    ? { ...phase, candidates: [...phase.candidates, newCandidate] }
+                                    : phase
+                            )
+                        };
+                        setSelectedPosition(updatedPosition);
+                        return updatedPosition;
+                    }
+                    return position;
+                });
+
+                setPositions(updatedPositions);
+            }, [selectedPosition, positions]);
+
+            // 候補者を更新
+            const updateCandidate = useCallback((phaseId, candidateId, updates) => {
+                const updatedPositions = positions.map(position => {
+                    if (position.id === selectedPosition?.id) {
+                        const updatedPosition = {
+                            ...position,
+                            phases: position.phases.map(phase => 
+                                phase.id === phaseId 
+                                    ? {
+                                        ...phase,
+                                        candidates: phase.candidates.map(candidate => 
+                                            candidate.id === candidateId 
+                                                ? { 
+                                                    ...candidate, 
+                                                    ...updates,
+                                                    lastUpdated: new Date().toISOString()
+                                                }
+                                                : candidate
+                                        )
+                                    }
+                                    : phase
+                            )
+                        };
+                        setSelectedPosition(updatedPosition);
+                        return updatedPosition;
+                    }
+                    return position;
+                });
+
+                setPositions(updatedPositions);
+            }, [selectedPosition, positions]);
+
+            // 候補者を削除
+            const deleteCandidate = useCallback((phaseId, candidateId) => {
+                const updatedPositions = positions.map(position => {
+                    if (position.id === selectedPosition?.id) {
+                        const updatedPosition = {
+                            ...position,
+                            phases: position.phases.map(phase => 
+                                phase.id === phaseId 
+                                    ? { ...phase, candidates: phase.candidates.filter(c => c.id !== candidateId) }
+                                    : phase
+                            )
+                        };
+                        setSelectedPosition(updatedPosition);
+                        return updatedPosition;
+                    }
+                    return position;
+                });
+
+                setPositions(updatedPositions);
+                setSelectedCandidate(null);
+            }, [selectedPosition, positions]);
 
             // メイン画面表示
             return (
@@ -357,13 +466,54 @@
                                                 <span className="text-sm text-gray-500">({phase.candidates.length})</span>
                                             </div>
                                             
-                                            <div className="space-y-2">
+                                            <div className="space-y-2 max-h-64 overflow-y-auto">
                                                 {phase.candidates.map((candidate) => (
-                                                    <div key={candidate.id} className="bg-white p-3 rounded border">
-                                                        <div className="font-medium text-sm">{candidate.name}</div>
+                                                    <div 
+                                                        key={candidate.id} 
+                                                        className={`bg-white p-3 rounded border cursor-pointer hover:shadow-md transition-all relative ${
+                                                            selectedCandidate?.id === candidate.id ? 'border-blue-400 bg-blue-50' : 'border-gray-200'
+                                                        }`}
+                                                        onClick={() => handleCandidateClick(candidate)}
+                                                        onDoubleClick={() => openCandidateDetail(candidate)}
+                                                    >
+                                                        <div className="flex items-center justify-between">
+                                                            <div className="font-medium text-sm">{candidate.name}</div>
+                                                            <div className="flex items-center space-x-1">
+                                                                <button
+                                                                    onClick={(e) => {
+                                                                        e.stopPropagation();
+                                                                        openCandidateDetail(candidate);
+                                                                    }}
+                                                                    className="text-gray-400 hover:text-blue-600 p-1"
+                                                                    title="詳細編集"
+                                                                >
+                                                                    <Edit3 />
+                                                                </button>
+                                                                <button
+                                                                    onClick={(e) => {
+                                                                        e.stopPropagation();
+                                                                        if (confirm(`${candidate.name}さんを削除しますか？`)) {
+                                                                            deleteCandidate(phase.id, candidate.id);
+                                                                        }
+                                                                    }}
+                                                                    className="text-gray-400 hover:text-red-600 p-1"
+                                                                    title="削除"
+                                                                >
+                                                                    <Trash2 />
+                                                                </button>
+                                                            </div>
+                                                        </div>
                                                         <div className="text-xs text-gray-500 mt-1">
                                                             {new Date(candidate.createdAt).toLocaleDateString()}
+                                                            {selectedCandidate?.id === candidate.id && (
+                                                                <span className="ml-2 text-blue-500 font-medium">選択中</span>
+                                                            )}
                                                         </div>
+                                                        {candidate.notes && (
+                                                            <div className="text-xs text-gray-600 mt-1 bg-gray-50 p-1 rounded">
+                                                                {candidate.notes.length > 30 ? `${candidate.notes.substring(0, 30)}...` : candidate.notes}
+                                                            </div>
+                                                        )}
                                                     </div>
                                                 ))}
                                                 {phase.candidates.length === 0 && (
@@ -377,17 +527,115 @@
                                                 <input
                                                     type="text"
                                                     placeholder="候補者を追加"
+                                                    value={newTaskInputs[phase.id] || ''}
+                                                    onChange={(e) => setNewTaskInputs(prev => ({ ...prev, [phase.id]: e.target.value }))}
                                                     className="w-full border rounded px-2 py-1 text-sm"
                                                     onKeyPress={(e) => {
-                                                        if (e.key === 'Enter' && e.target.value.trim()) {
-                                                            alert(`${e.target.value}を${phase.name}に追加`);
-                                                            e.target.value = '';
+                                                        if (e.key === 'Enter') {
+                                                            addCandidate(phase.id, newTaskInputs[phase.id]);
+                                                            setNewTaskInputs(prev => ({ ...prev, [phase.id]: '' }));
                                                         }
                                                     }}
                                                 />
                                             </div>
                                         </div>
                                     ))}
+                                </div>
+                            </div>
+                        </div>
+                    )}
+
+                    {/* 候補者詳細編集モーダル */}
+                    {detailModalOpen && detailEditingCandidate && (
+                        <div className="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+                            <div className="bg-white rounded-lg p-6 max-w-lg w-full mx-4 max-h-[90vh] overflow-y-auto">
+                                <div className="flex items-center justify-between mb-4">
+                                    <h3 className="text-lg font-semibold">候補者詳細編集</h3>
+                                    <button
+                                        onClick={() => {
+                                            setDetailModalOpen(false);
+                                            setDetailEditingCandidate(null);
+                                            setDetailEditingPhase(null);
+                                        }}
+                                        className="text-gray-500 hover:text-gray-700"
+                                    >
+                                        ✕
+                                    </button>
+                                </div>
+
+                                <div className="space-y-4">
+                                    <div>
+                                        <label className="block text-sm font-medium text-gray-700 mb-1">
+                                            候補者名 <span className="text-red-500">*</span>
+                                        </label>
+                                        <input
+                                            type="text"
+                                            value={detailEditingCandidate.name}
+                                            onChange={(e) => setDetailEditingCandidate(prev => ({ ...prev, name: e.target.value }))}
+                                            className="w-full border rounded-lg px-3 py-2"
+                                            required
+                                        />
+                                    </div>
+
+                                    <div>
+                                        <label className="block text-sm font-medium text-gray-700 mb-1">
+                                            メモ・詳細情報
+                                        </label>
+                                        <textarea
+                                            value={detailEditingCandidate.notes || ''}
+                                            onChange={(e) => setDetailEditingCandidate(prev => ({ ...prev, notes: e.target.value }))}
+                                            className="w-full border rounded-lg px-3 py-2 h-32 resize-none"
+                                            placeholder="候補者に関するメモや詳細情報を入力してください..."
+                                        />
+                                    </div>
+
+                                    <div className="text-xs text-gray-500">
+                                        <strong>登録日:</strong> {new Date(detailEditingCandidate.createdAt).toLocaleString('ja-JP', {
+                                            year: 'numeric',
+                                            month: 'short', 
+                                            day: 'numeric',
+                                            hour: '2-digit',
+                                            minute: '2-digit'
+                                        })}
+                                        {detailEditingCandidate.lastUpdated && detailEditingCandidate.lastUpdated !== detailEditingCandidate.createdAt && (
+                                            <div className="mt-1">
+                                                <strong>最終更新:</strong> {new Date(detailEditingCandidate.lastUpdated).toLocaleString('ja-JP', {
+                                                    year: 'numeric',
+                                                    month: 'short',
+                                                    day: 'numeric', 
+                                                    hour: '2-digit',
+                                                    minute: '2-digit'
+                                                })}
+                                            </div>
+                                        )}
+                                    </div>
+                                </div>
+
+                                <div className="flex space-x-2 mt-6 pt-4 border-t">
+                                    <button
+                                        onClick={() => {
+                                            setDetailModalOpen(false);
+                                            setDetailEditingCandidate(null);
+                                            setDetailEditingPhase(null);
+                                        }}
+                                        className="flex-1 bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-lg"
+                                    >
+                                        キャンセル
+                                    </button>
+                                    <button
+                                        onClick={() => {
+                                            updateCandidate(detailEditingPhase, detailEditingCandidate.id, {
+                                                name: detailEditingCandidate.name,
+                                                notes: detailEditingCandidate.notes
+                                            });
+                                            setDetailModalOpen(false);
+                                            setDetailEditingCandidate(null);
+                                            setDetailEditingPhase(null);
+                                        }}
+                                        className="flex-1 bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg"
+                                    >
+                                        保存
+                                    </button>
                                 </div>
                             </div>
                         </div>
